# wacko

./: Cargo.toml  LICENSE  definitions.md  readme.md
.github/workflows/: ci.yml
examples/: basic.rs  basic_writer.rs
src/: errors.rs  external_kind.rs  global.rs  indices.rs  instructions.rs  lib.rs  memory.rs  module.rs  section.rs  validator.rs  value_type.rs
src/components/: export.rs  func.rs  global.rs  import.rs  memory.rs  mod.rs  table.rs  type_signature.rs
src/sections/: code.rs  code_section.rs  data.rs  data_section.rs  element.rs  element_section.rs  export.rs  export_section.rs  function.rs  function_section.rs  global.rs  global_section.rs  import.rs  import_section.rs  memory.rs  memory_section.rs  mod.rs  table.rs  table_section.rs  type_section.rs  types.rs
src/structs/: external_kind.rs  function_body.rs  global.rs  instructions.rs  memory.rs  mod.rs  table.rs  value_type.rs
src/test/: mod.rs
src/test/functions/: control_flow.rs  empty_fn.rs  f32.rs  f64.rs  i32.rs  i64.rs  import_export.rs  local.rs  mod.rs
src/test/memory/: empty.rs  instructions.rs  load_store.rs  (+2 more)
testdata/fn/: control_flow.wasm  control_flow.wat  f32.wasm  f32.wat  f64.wasm  f64.wat  i32.wasm  import_export.wasm  local.wat
testdata/functions/: f32.wasm  f32.wat  f64.wasm  f64.wat  i32.wat  i64.wasm  i64.wat  import_export.wat  import_export2.wasm  import_export2.wat  local.wasm
testdata/memory/: empty.wat  instructions.wasm  instructions.wat  load_store_float.wasm  load_store_float.wat  load_store_int.wasm  load_store_int.wat  static_data.wasm  static_data.wat
