[package]
name = "wacko"
version = "0.2.0"
edition = "2021"
description = "WebAssembly Encoder"
license = "MIT"
readme = "./readme.md"
exclude = ["testdata"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leb128 = "0.2.5"